--- a/style/style.scss
+++ b/style/style.scss
@@ -456,6 +456,9 @@ main {
         }
 
         .main-image {
+            max-width: 406px;
+            width: 100%;
+            
             position: absolute;
             padding-right: 244px;
             margin-top: 36px;
@@ -920,6 +923,7 @@ main {
 
         .faces {
             max-width: 1268px;
+            width: 100%;
 
             margin-left: auto;
             margin-right: auto;
@@ -1234,6 +1238,7 @@ footer {
 
 .information-block {
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 64px;
 
     .logo-container {
