--- a/style/style.scss
+++ b/style/style.scss
@@ -70,6 +70,9 @@ header {
     margin-right: auto;
     padding-top: 61px;
 
+    padding-left: 1%;
+    padding-right: 1%;
+
     .logo {
         font-family: 'M PLUS 1p extrabold';
         font-style: normal;
@@ -159,6 +162,7 @@ header {
 
         margin-top: auto;
         margin-bottom: auto;
+        padding-right: 1%;
     }
 
 } //header-line
@@ -170,6 +174,9 @@ header {
     margin-top: 138px;
     margin-left: auto;
     margin-right: auto;
+
+    padding-left: 1%;
+    padding-right: 1%;
 
     max-width: 1169px;
     width: 100%;
@@ -216,6 +223,7 @@ header {
 
         align-items: center;
         text-align: center;
+        padding-right: 1%;
 
         transition: transform 1s;
 
@@ -335,6 +343,9 @@ main {
 
     margin-left: auto;
     margin-right: auto;
+
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 .intro-container__item {
@@ -959,7 +970,7 @@ main {
         padding-bottom: 136px;
         
 
-        .testimomial-text {
+        .testimonial-text {
             max-width: 1144px;
             width: 100%;
 
