--- a/style/style.scss
+++ b/style/style.scss
@@ -111,7 +111,7 @@ header {
 
             color: #FCFCFC;
 
-            transition: all 0.5s;
+            transition: font-size 0.5s, color 0.5s;
 
             &:hover {
                 font-size: 15px;
@@ -157,12 +157,108 @@ header {
         }
     }
 
-    img {
-        height: 16px;
+    #menu__toggle {
+        opacity: 0;
+    }
+      
+    #menu__toggle:checked ~ .menu__btn > span {
+        transform: rotate(45deg);
+    }
+      
+    #menu__toggle:checked ~ .menu__btn > span::before {
+        top: 0;
+        transform: rotate(0);
+    }
+      
+    #menu__toggle:checked ~ .menu__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+      
+    #menu__toggle:checked ~ .menu__box {
+        visibility: visible;
+        // left: 0;
+    }
+      
+    .menu__btn {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        top: 68px;
 
-        margin-top: auto;
-        margin-bottom: auto;
-        padding-right: 1%;
+        margin-left: -14px;
+      
+        width: 26px;
+        height: 26px;
+      
+        cursor: pointer;
+        z-index: 1;
+    }
+      
+    .menu__btn > span,
+    .menu__btn > span::before,
+    .menu__btn > span::after {
+        display: block;
+        position: absolute;
+      
+        width: 100%;
+        height: 2px;
+      
+        background-color: #FCFCFC;
+      
+        transition-duration: .25s;
+
+        &:hover { 
+            background-color: #F61067;}
+    }
+      
+    .menu__btn > span::before {
+        content: '';
+        top: -8px;
+    }
+      
+    .menu__btn > span::after {
+        content: '';
+        top: 8px;
+    }
+      
+    .menu__box {
+        display: block;
+        position: fixed;
+        visibility: hidden;
+        top: 0;
+        right: 0;
+      
+        width: 300px;
+        max-height: 828px;
+      
+        margin: 0;
+        padding: 80px 0;
+      
+        list-style: none;
+      
+        background-color: #35145a60;
+        box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+      
+        transition-duration: .25s;
+    }
+      
+    .menu__item {
+        display: block;
+        padding: 12px 24px;
+      
+        color: #FCFCFC;
+      
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+      
+        text-decoration: none;
+      
+        transition-duration: .25s;
+    }
+      .menu__item:hover {
+        background-color: rgba(246, 16, 104, 0.411);
     }
 
 } //header-line
