--- a/style/tablet.css
+++ b/style/tablet.css
@@ -14,10 +14,13 @@
   }
   .subheader-container {
     margin-top: 44px;
-    margin-left: -65px;
+    margin-left: -175px;
   }
   .subheader-container .subheader {
     margin-left: 105px;
+    font-size: 15px;
+    line-height: 24px;
+    padding-left: 16%;
   }
   .intro-container__item .image-container .background-image {
     display: none;
