--- a/style/tablet.scss
+++ b/style/tablet.scss
@@ -20,10 +20,13 @@
 
     .subheader-container {
         margin-top: 44px;
-        margin-left: -65px;
+        margin-left: -175px;
 
         .subheader {
             margin-left: 105px;
+            font-size: 15px;
+            line-height: 24px;
+            padding-left: 16%;
         }
     }
 
